@@ -110,10 +110,9 @@ const unwrapEmptySpan = function (dom: DOMUtils, node: Node) {
   }
 };
 
-const processUnderlineAndColor = function (dom: DOMUtils, node: Node) {
-  let textDecoration;
+const processTextDecorationsAndColor = function (dom: DOMUtils, node: Node) {
   if (node.nodeType === 1 && node.parentNode && node.parentNode.nodeType === 1) {
-    textDecoration = FormatUtils.getTextDecoration(dom, node.parentNode);
+    const textDecoration = FormatUtils.getTextDecoration(dom, node.parentNode);
     if (dom.getStyle(node, 'color') && textDecoration) {
       dom.setStyle(node, 'text-decoration', textDecoration);
     } else if (dom.getStyle(node, 'text-decoration') === textDecoration) {
@@ -122,11 +121,11 @@ const processUnderlineAndColor = function (dom: DOMUtils, node: Node) {
   }
 };
 
-const mergeUnderlineAndColor = function (dom: DOMUtils, format, vars: FormatVars, node: Node) {
+const mergeTextDecorationsAndColor = function (dom: DOMUtils, format, vars: FormatVars, node: Node) {
   // Colored nodes should be underlined so that the color of the underline matches the text color.
-  if (format.styles.color || format.styles.textDecoration) {
-    Tools.walk(node, Fun.curry(processUnderlineAndColor, dom), 'childNodes');
-    processUnderlineAndColor(dom, node);
+  if (format.styles && (format.styles.color || format.styles.textDecoration)) {
+    Tools.walk(node, Fun.curry(processTextDecorationsAndColor, dom), 'childNodes');
+    processTextDecorationsAndColor(dom, node);
   }
 };
 
@@ -212,7 +211,7 @@ const mergeWithParents = function (editor: Editor, format, name: string, vars: F
 
 export {
   mergeWithChildren,
-  mergeUnderlineAndColor,
+  mergeTextDecorationsAndColor,
   mergeBackgroundColorAndFontSize,
   mergeSubSup,
   mergeSiblings,
